src/v8/CAPI_WireData.pas


end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_EmergAmps():Double;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.EmergAmps;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_EmergAmps(Value: Double);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       pWireData.EmergAmps := Value;
       ConductorSetDefaults(ConductorProps.EmergAmps, pWireData);
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_Diameter():Double;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FRadius * 2.0;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_Diameter(Value: Double);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FRadius := Value / 2.0;
          ConductorSetDefaults(ConductorProps.diam, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_Radius():Double;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FRadius;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_Radius(Value: Double);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FRadius := Value;
          ConductorSetDefaults(ConductorProps.Radius, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_GMRac():Double;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FGMR60;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_GMRac(Value: Double);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FGMR60 := Value;
          ConductorSetDefaults(ConductorProps.GMRac, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_Rac():Double;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FR60;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_Rac(Value: Double);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FR60 := Value;
          ConductorSetDefaults(ConductorProps.Rac, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_Rdc():Double;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FRDC;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_Rdc(Value: Double);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FRDC := Value;
          ConductorSetDefaults(ConductorProps.Rdc, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_GMRUnits():Integer;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FGMRUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_GMRUnits(Value: Integer);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FGMRUnits := Value;
          ConductorSetDefaults(ConductorProps.GMRunits, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_RadiusUnits():Integer;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FRadiusUnits;
  End;
end;

//------------------------------------------------------------------------------
PROCEDURE WireData_Set_RadiusUnits(Value: Integer);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FRadiusUnits := Value;
          ConductorSetDefaults(ConductorProps.radunits, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION WireData_Get_ResistanceUnits():Integer;cdecl;
Var
   pWireData:TWireDataObj;
begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       Result := pWireData.FResistanceUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE WireData_Set_ResistanceUnits(Value: Integer);cdecl;
Var
   pWireData:TWireDataObj;
begin
  IF ActiveCircuit[ActiveActor] <> NIL
  THEN Begin
       pWireData := WireDataClass[ActiveActor].GetActiveObj;
       with pWireData do 
       begin
          FResistanceUnits := Value;
          ConductorSetDefaults(ConductorProps.Runits, pWireData);
       end;
  End;
end;
//------------------------------------------------------------------------------
END.
